--- a/Object_detection_pi_QKT.ipynb
+++ b/Object_detection_pi_QKT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,42 +42,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up camera constants\n",
+    "# Set up images resolution\n",
     "IM_WIDTH = 1920\n",
     "IM_HEIGHT = 1080\n",
-    "#IM_WIDTH = 640    Use smaller resolution for\n",
-    "#IM_HEIGHT = 480   slightly faster framerate"
+    "#IM_WIDTH = 640    \n",
+    "#IM_HEIGHT = 480   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select camera type (if user enters --usbcam when calling this script,\n",
-    "# a USB webcam will be used)\n",
+    "# Select camera type (trying feature: if user enters --webcam when calling this script,\n",
+    "# a webcam will be used)\n",
     "#camera_type = 'picamera'\n",
-    "''' #testing feature to run program from terminal with --usb or\n",
+    "''' #testing feature to run program from terminal with --webcam\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument('--usbcam', help='Use a USB webcam instead of picamera',\n",
     "                    action='store_true')\n",
     "args = parser.parse_args()\n",
     "if args.usbcam:\n",
-    "    camera_type = 'usb'\n",
+    "    camera_type = 'webcam'\n",
     " '''\n",
-    "camera_type='usb'\n",
+    "camera_type='webcam'\n",
     "# This is needed since the working directory is the object_detection folder.\n",
     "sys.path.append('..')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Load the label map.\n",
     "# Label maps map indices to category names, so that when the convolution\n",
-    "# network predicts `5`, we know that this corresponds to `airplane`.\n",
-    "# Here we use internal utility functions, but anything that returns a\n",
+    "# network predicts `5`, we know that this corresponds to `aircraft`.\n",
+    "# This code use internal utility functions, but anything that returns a\n",
     "# dictionary mapping integers to appropriate string labels would be fine\n",
     "label_map = label_map_util.load_labelmap(PATH_TO_LABELS)\n",
     "categories = label_map_util.convert_label_map_to_categories(label_map, max_num_classes=NUM_CLASSES, use_display_name=True)\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,19 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# I basically copy+pasted the code for the object\n",
+    "#basically copy+pasted the code for the object\n",
     "# detection loop twice, and made one work for Picamera and the other work\n",
     "# for USB."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -248,24 +248,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if camera_type == 'usb':\n",
-    "    # Initialize USB webcam feed, 1= back camera, 0 = front camera (surfacebook 2)\n",
+    "if camera_type == 'webcam':\n",
+    "    # Initialize webcam feed, 1= back camera, 0 = front camera (surfacebook 2)\n",
     "    camera = cv2.VideoCapture(1)\n",
     "    #camera = cv2.VideoCapture('test_video.mp4')\n",
     "    #replace with video.mp4 for offline processing\n",
     "    ret = camera.set(3,IM_WIDTH)\n",
     "    ret = camera.set(4,IM_HEIGHT)\n",
+    "    \n",
     "    #Initialize output video\n",
     "    # VideoWriter is the responsible of creating a copy of the video\n",
     "    # used for the detections but with the detections overlays. Keep in\n",
     "    # mind the frame size has to be the same as original video.\n",
-    "    out = cv2.VideoWriter('object_detected_result.avi', cv2.VideoWriter_fourcc(\n",
-    "        'M', 'J', 'P', 'G'), 10, (IM_WIDTH, IM_HEIGHT))\n",
-    "    \n",
+    "    out = cv2.VideoWriter('object_detected_result.avi', cv2.VideoWriter_fourcc(*'XVID'), 10, (IM_WIDTH, IM_HEIGHT))\n",
+    "    #VideoWriter('name.avi,codec,FPS,(width,height)')\n",
     "    while(True):\n",
     "\n",
     "        t1 = cv2.getTickCount()\n",
@@ -289,16 +289,17 @@
     "            category_index,\n",
     "            use_normalized_coordinates=True,\n",
     "            line_thickness=8,\n",
-    "            min_score_thresh=0.85)\n",
+    "            min_score_thresh=0.45)\n",
     "\n",
     "        cv2.putText(frame,\"FPS: {0:.2f}\".format(frame_rate_calc),(30,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
     "        \n",
     "        # All the results have been drawn on the frame, so it's time to display it.\n",
-    "        cv2.imshow('Object detector', frame)\n",
+    "        cv2.imshow('Object Detector QKT v0.1', frame)\n",
+    "        #write the result video\n",
     "        # https://www.learnopencv.com/why-does-opencv-use-bgr-color-format/\n",
-    "        color_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "        output_rgb = cv2.cvtColor(color_frame, cv2.COLOR_RGB2BGR)\n",
-    "        out.write(output_rgb)\n",
+    "        #color_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        #output_rgb = cv2.cvtColor(color_frame, cv2.COLOR_RGB2BGR)\n",
+    "        out.write(frame)\n",
     "\n",
     "        t2 = cv2.getTickCount()\n",
     "        time1 = (t2-t1)/freq\n",
