--- a/Object_detection_pi_QKT.ipynb
+++ b/Object_detection_pi_QKT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,14 @@
     "#from picamera import PiCamera\n",
     "import tensorflow as tf\n",
     "import argparse\n",
-    "import sys"
+    "import sys\n",
+    "import time\n",
+    "import psutil as sys_info "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,20 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Initialize frame rate calculation\n",
-    "frame_rate_calc = 1\n",
+    "frame_rate = 1\n",
     "freq = cv2.getTickFrequency()\n",
     "font = cv2.FONT_HERSHEY_SIMPLEX"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initialize time logging\n",
+    "time_local = time.localtime() # get struct_time\n",
+    "time_string = time.strftime(\"%m/%d/%Y, %H:%M:%S\", time_local)\n",
+    "\n",
+    "#Initialize cpu and memory using logging\n",
+    "sys_info_cpu=sys_info.cpu_percent()\n",
+    "sys_info_ram=sys_info.virtual_memory()[2] #2 = percent, 1="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {
     "scrolled": true
    },
@@ -228,14 +245,15 @@
     "            line_thickness=8,\n",
     "            min_score_thresh=0.40)\n",
     "\n",
-    "        cv2.putText(frame,\"FPS: {0:.2f}\".format(frame_rate_calc),(30,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
+    "        cv2.putText(frame,\"FPS: {0:.2f}\".format(frame_rate),(30,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
+    "     \n",
     "\n",
     "        # All the results have been drawn on the frame, so it's time to display it.\n",
     "        cv2.imshow('Object detector', frame)\n",
     "\n",
     "        t2 = cv2.getTickCount()\n",
     "        time1 = (t2-t1)/freq\n",
-    "        frame_rate_calc = 1/time1\n",
+    "        frame_rate = 1/time1\n",
     "\n",
     "        # Press 'q' to quit\n",
     "        if cv2.waitKey(1) == ord('q'):\n",
@@ -248,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,8 +309,10 @@
     "            line_thickness=8,\n",
     "            min_score_thresh=0.45)\n",
     "\n",
-    "        cv2.putText(frame,\"FPS: {0:.2f}\".format(frame_rate_calc),(30,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
-    "        \n",
+    "        cv2.putText(frame,\"FPS: {0:.2f}\".format(frame_rate),(30,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
+    "        cv2.putText(frame,time_string,(250,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
+    "        cv2.putText(frame,\"CPU: {0:.2f}\".format(sys_info_cpu),(750,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
+    "        cv2.putText(frame,\"RAM: {0:.2f}\".format(sys_info_ram),(950,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
     "        # All the results have been drawn on the frame, so it's time to display it.\n",
     "        cv2.imshow('Object Detector QKT v0.1', frame)\n",
     "        #write the result video\n",
@@ -303,7 +323,11 @@
     "\n",
     "        t2 = cv2.getTickCount()\n",
     "        time1 = (t2-t1)/freq\n",
-    "        frame_rate_calc = 1/time1\n",
+    "        frame_rate = 1/time1 #update Frame rate\n",
+    "        time_local = time.localtime() # update local time\n",
+    "        time_string = time.strftime(\"%m/%d/%Y, %H:%M:%S\", time_local)\n",
+    "        sys_info_cpu=sys_info.cpu_percent() #update cpu and ram using\n",
+    "        sys_info_ram=sys_info.virtual_memory()[2]\n",
     "\n",
     "        # Press 'q' to quit\n",
     "        if cv2.waitKey(1) == ord('q'):\n",
@@ -315,13 +339,6 @@
     "\n",
     "cv2.destroyAllWindows()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
