--- a/Object_detection_pi_QKT_picam.ipynb
+++ b/Object_detection_pi_QKT_picam.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "######## Camera Object Detection Using Tensorflow #########\n",
+    "######## Picamera Object Detection Using Tensorflow #########\n",
     "#\n",
     "# Author: Quang Khoi Tran\n",
     "# Date: 11/03/19\n",
     "# Description: \n",
     "# This program uses TensorFlow to perform object detection.\n",
-    "# It peforms object detection on a webcam feed.\n",
+    "# It loads the classifier uses it to perform object detection on a Picamera feed.\n",
     "# It draws boxes and scores around the objects of interest in each frame from\n",
-    "# the camera. \n",
-    "\n",
+    "# the Picamera. \n",
     "## Some of the code is copied from Google's example at\n",
     "## https://github.com/tensorflow/models/blob/master/research/object_detection/object_detection_tutorial.ipynb\n",
     "\n",
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +32,8 @@
     "import os\n",
     "import cv2\n",
     "import numpy as np\n",
-    "#from picamera.array import PiRGBArray\n",
-    "#from picamera import PiCamera\n",
+    "from picamera.array import PiRGBArray\n",
+    "from picamera import PiCamera\n",
     "import tensorflow as tf\n",
     "import argparse\n",
     "import sys\n",
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select camera type (trying feature: if user enters --webcam when calling this script,\n",
     "# a webcam will be used)\n",
-    "#camera_type = 'picamera'\n",
+    "camera_type = 'picamera'\n",
     "''' #testing feature to run program from terminal with --webcam\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument('--usbcam', help='Use a USB webcam instead of picamera',\n",
@@ -72,14 +71,14 @@
     "if args.usbcam:\n",
     "    camera_type = 'webcam'\n",
     " '''\n",
-    "camera_type='webcam'\n",
+    "#camera_type='webcam'\n",
     "# This is needed since the working directory is the object_detection folder.\n",
     "sys.path.append('..')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,42 +198,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "if camera_type == 'webcam':\n",
-    "    # Initialize webcam feed, 1= back camera, 0 = front camera (surfacebook 2)\n",
-    "    camera = cv2.VideoCapture(1)\n",
-    "    #camera = cv2.VideoCapture('720p.mp4')\n",
-    "    #replace with video.mp4 for offline processing\n",
-    "    ret = camera.set(3,IM_WIDTH)\n",
-    "    ret = camera.set(4,IM_HEIGHT)\n",
-    "    \n",
+    "# piCamera\n",
+    "if camera_type == 'picamera':\n",
+    "    # Initialize Picamera and grab reference to the raw capture\n",
+    "    camera = PiCamera()\n",
+    "    camera.resolution = (IM_WIDTH,IM_HEIGHT)\n",
+    "    camera.framerate = 10\n",
+    "    rawCapture = PiRGBArray(camera, size=(IM_WIDTH,IM_HEIGHT))\n",
+    "    rawCapture.truncate(0)\n",
+    "\n",
     "    #Initialize output video\n",
     "    # VideoWriter is the responsible of creating a copy of the video\n",
     "    # used for the detections but with the detections overlays. Keep in\n",
     "    # mind the frame size has to be the same as original video.\n",
-    "    out = cv2.VideoWriter('object_detected_result_webcam.avi', cv2.VideoWriter_fourcc(*'XVID'), 10, (IM_WIDTH, IM_HEIGHT))\n",
+    "    out = cv2.VideoWriter('object_detected_result_pi.avi', cv2.VideoWriter_fourcc(*'XVID'), 10, (IM_WIDTH, IM_HEIGHT))\n",
     "    #VideoWriter('name.avi,codec,FPS,(width,height)')\n",
-    "    while(True):\n",
+    "    \n",
+    "    for frame1 in camera.capture_continuous(rawCapture, format=\"bgr\",use_video_port=True):\n",
     "\n",
     "        t1 = cv2.getTickCount()\n",
-    "\n",
+    "        \n",
     "        # Acquire frame and expand frame dimensions to have shape: [1, None, None, 3]\n",
     "        # i.e. a single-column array, where each item in the column has the pixel RGB value\n",
-    "        ret, frame = camera.read()\n",
+    "        frame = np.copy(frame1.array)\n",
+    "        frame.setflags(write=1)\n",
     "        frame_expanded = np.expand_dims(frame, axis=0)\n",
-    "        \n",
+    "\n",
     "        # Perform the actual detection by running the model with the image as input\n",
     "        (boxes, scores, classes, num) = sess.run(\n",
     "            [detection_boxes, detection_scores, detection_classes, num_detections],\n",
@@ -249,20 +244,22 @@
     "            category_index,\n",
     "            use_normalized_coordinates=True,\n",
     "            line_thickness=8,\n",
-    "            min_score_thresh=0.45)\n",
+    "            min_score_thresh=0.40)\n",
     "\n",
     "        cv2.putText(frame,\"FPS: {0:.2f}\".format(frame_rate),(30,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
     "        cv2.putText(frame,time_string,(250,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
     "        cv2.putText(frame,\"CPU: {0:.2f}\".format(sys_info_cpu),(750,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
     "        cv2.putText(frame,\"RAM: {0:.2f}\".format(sys_info_ram),(950,50),font,1,(255,255,0),2,cv2.LINE_AA)\n",
+    "     \n",
+    "\n",
     "        # All the results have been drawn on the frame, so it's time to display it.\n",
-    "        cv2.imshow('Object Detector QKT v0.1', frame)\n",
+    "        cv2.imshow('Object detector', frame)\n",
     "        #write the result video\n",
     "        # https://www.learnopencv.com/why-does-opencv-use-bgr-color-format/\n",
     "        #color_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "        #output_rgb = cv2.cvtColor(color_frame, cv2.COLOR_RGB2BGR)\n",
     "        out.write(frame)\n",
-    "\n",
+    "        \n",
     "        t2 = cv2.getTickCount()\n",
     "        time1 = (t2-t1)/freq\n",
     "        frame_rate = 1/time1 #update Frame rate\n",
@@ -274,12 +271,20 @@
     "        # Press 'q' to quit\n",
     "        if cv2.waitKey(1) == ord('q'):\n",
     "            break\n",
-    "            \n",
-    "    out.release()\n",
-    "    camera.release()\n",
     "\n",
+    "        rawCapture.truncate(0)\n",
     "\n",
-    "cv2.destroyAllWindows()\n"
+    "    out.realease()\n",
+    "    camera.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
